--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -120,13 +120,6 @@
 					var authBtns = ['weixin'];
 					var auths = {};
 					var oauthArea = doc.getElementById('weixin-oauth');
-					
-					var toMain = function() {
-						mui.openWindow({
-							"id": 'main',
-							"url": '../main/main.html'
-						});
-					};
 					plus.oauth.getServices(function(services) {
 						for(var i in services) {
 							var service = services[i];
@@ -148,7 +141,6 @@
 							var auth = auths['weixin'];
 							var waiting = plus.nativeUI.showWaiting();
 							auth.login(function() {
-								waiting.close();
 								auth.getUserInfo(function() {
 									var name = auth.userInfo.nickname || auth.userInfo.name;
 									var params = {};
@@ -159,11 +151,24 @@
 									Repository.User.login(params, {
 										ok: function(data) {
 											app.createState(name, function() {
-												toMain();
+												plus.storage.setItem('LoginFlag', 'isLogin');
+												waiting.close();
+												var mainWebView = plus.webview.getWebviewById('main');
+												if(mainWebView != null) {
+													mainWebView.show();
+												} else {
+													mui.openWindow({
+														id: "main",
+														url: "../main/main.html"
+													});
+												}
 											});
 										},
 										ng: function(data) {
-											Log.e(data);
+											waiting.close();
+										},
+										error: function() {
+											waiting.close();
 										}
 									});
 								}, function(e) {});
@@ -183,6 +188,7 @@
 					var loginBtn = doc.getElementById('login');
 					loginBtn.addEventListener('tap', function(event) {
 						console.log("click login btn");
+						var waiting = plus.nativeUI.showWaiting();
 						var params = {};
 						params[Api.Params.loginType] = LOGIN_TYPE.EMAIL;
 						params[Api.Params.email] = doc.getElementById('email').value.trim();
@@ -191,11 +197,31 @@
 							ok: function(data) {
 								// TODO OK logic
 								Log.d("email login ok");
-								toMain();
+								waiting.close();
+								plus.storage.setItem('LoginFlag', 'isLogin');
+								var mainWebView = plus.webview.getWebviewById('main');
+								if(mainWebView != null) {
+									mainWebView.show();
+								} else {
+									mui.openWindow({
+										id: "main",
+										url: "../main/main.html"
+									});
+								}
 							},
 							ng: function(data) {
 								// TODO NG logic
 								Log.d("email login ng");
+								waiting.close();
+								if(data === "3001") {
+									mui.toast(TextMessage.login_error, {
+										duration: 'long',
+										type: 'div'
+									})
+								}
+							},
+							error: function() {
+								waiting.close();
 							}
 						});
 					});
