--- a/kankan/pages/main/main.html
+++ b/kankan/pages/main/main.html
@@ -39,15 +39,16 @@
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
 		<script type="text/javascript" src="../../js/language.js"></script>
+		<script type="text/javascript" src="../../js/common.js"></script>
 		<script type="text/javascript" charset="utf-8">
-//			if(!mui.os.android) {
-//				//The overall slide temporarily support android phone, because the two pages of mobile animation, can not guarantee synchronization;
-//				document.getElementById("move-togger").classList.remove('mui-hidden');
-//				var spans = document.querySelectorAll('.android-only');
-//				for(var i = 0, len = spans.length; i < len; i++) {
-//					spans[i].style.display = "none";
-//				}
-//			}
+			//			if(!mui.os.android) {
+			//				//The overall slide temporarily support android phone, because the two pages of mobile animation, can not guarantee synchronization;
+			//				document.getElementById("move-togger").classList.remove('mui-hidden');
+			//				var spans = document.querySelectorAll('.android-only');
+			//				for(var i = 0, len = spans.length; i < len; i++) {
+			//					spans[i].style.display = "none";
+			//				}
+			//			}
 			//mui initialization
 			mui.init({
 				swipeBack: false
@@ -64,6 +65,7 @@
 
 			//Create subpage, first tab page display, others are hidden;
 			mui.plusReady(function() {
+				Log.i("main.html plusReady...");
 				var self = plus.webview.currentWebview();
 				for(var i = 0; i < 4; i++) {
 					var temp = {};
