--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -148,6 +148,312 @@
 					-webkit-transform: scale(1.0);
 				}
 			}
+			/*******************************************/
+			
+			html,
+			body {
+				min-height: 100%;
+				/**background-color: #efeff4;**/
+			}
+			
+			.animated {
+				-webkit-animation-duration: 0.5s;
+				animation-duration: 0.5s;
+				-webkit-animation-fill-mode: both;
+				animation-fill-mode: both;
+			}
+			
+			@-webkit-keyframes bounceInDown {
+				0%,
+				60%,
+				75%,
+				90%,
+				100% {
+					-webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+					transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+				}
+				0% {
+					opacity: 0;
+					-webkit-transform: translate3d(0, -100%, 0);
+					transform: translate3d(0, -100%, 0);
+				}
+				60% {
+					opacity: 0.75;
+					-webkit-transform: translate3d(0, 25px, 0);
+					transform: translate3d(0, 25px, 0);
+				}
+				75% {
+					-webkit-transform: translate3d(0, -10px, 0);
+					transform: translate3d(0, -10px, 0);
+				}
+				90% {
+					-webkit-transform: translate3d(0, 5px, 0);
+					transform: translate3d(0, 5px, 0);
+				}
+				100% {
+					-webkit-transform: none;
+					transform: none;
+				}
+			}
+			
+			@keyframes bounceInDown {
+				0%,
+				60%,
+				75%,
+				90%,
+				100% {
+					-webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+					transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+				}
+				0% {
+					opacity: 0;
+					-webkit-transform: translate3d(0, -100%, 0);
+					transform: translate3d(0, -100%, 0);
+				}
+				60% {
+					opacity: 0.75;
+					-webkit-transform: translate3d(0, 25px, 0);
+					transform: translate3d(0, 25px, 0);
+				}
+				75% {
+					-webkit-transform: translate3d(0, -10px, 0);
+					transform: translate3d(0, -10px, 0);
+				}
+				90% {
+					-webkit-transform: translate3d(0, 5px, 0);
+					transform: translate3d(0, 5px, 0);
+				}
+				100% {
+					-webkit-transform: none;
+					transform: none;
+				}
+			}
+			
+			.bounce-in-down {
+				-webkit-animation-name: bounceInDown;
+				animation-name: bounceInDown;
+			}
+			
+			@-webkit-keyframes fadeInDown {
+				0%,
+				60%,
+				75%,
+				90%,
+				100% {
+					-webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+					transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+				}
+				0% {
+					opacity: 0;
+					-webkit-transform: translate3d(0, -100%, 0);
+					transform: translate3d(0, -100%, 0);
+				}
+				60% {
+					opacity: 0.75;
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				75% {
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				90% {
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				100% {
+					-webkit-transform: none;
+					transform: none;
+				}
+			}
+			
+			@keyframes fadeInDown {
+				0%,
+				60%,
+				75%,
+				90%,
+				100% {
+					-webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+					transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+				}
+				0% {
+					opacity: 0;
+					-webkit-transform: translate3d(0, -100%, 0);
+					transform: translate3d(0, -100%, 0);
+				}
+				60% {
+					opacity: 0.75;
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				75% {
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				90% {
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				100% {
+					-webkit-transform: none;
+					transform: none;
+				}
+			}
+			
+			.fade-in-down {
+				-webkit-animation-name: fadeInDown;
+				animation-name: fadeInDown;
+			}
+			
+			@-webkit-keyframes bounceOutUp {
+				20% {
+					-webkit-transform: translate3d(0, -10px, 0);
+					transform: translate3d(0, -10px, 0);
+				}
+				40%,
+				45% {
+					opacity: 0.75;
+					-webkit-transform: translate3d(0, 20px, 0);
+					transform: translate3d(0, 20px, 0);
+				}
+				100% {
+					opacity: 0;
+					-webkit-transform: translate3d(0, -100%, 0);
+					transform: translate3d(0, -100%, 0);
+				}
+			}
+			
+			@keyframes bounceOutUp {
+				20% {
+					-webkit-transform: translate3d(0, -10px, 0);
+					transform: translate3d(0, -10px, 0);
+				}
+				40%,
+				45% {
+					opacity: 0.75;
+					-webkit-transform: translate3d(0, 20px, 0);
+					transform: translate3d(0, 20px, 0);
+				}
+				100% {
+					opacity: 0;
+					-webkit-transform: translate3d(0, -100%, 0);
+					transform: translate3d(0, -100%, 0);
+				}
+			}
+			
+			.bounce-out-up {
+				-webkit-animation-name: bounceOutUp;
+				animation-name: bounceOutUp;
+			}
+			
+			@-webkit-keyframes fadeOutUp {
+				20% {
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				40%,
+				45% {
+					opacity: 0.75;
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				100% {
+					opacity: 0;
+					-webkit-transform: translate3d(0, -100%, 0);
+					transform: translate3d(0, -100%, 0);
+				}
+			}
+			
+			@keyframes fadeOutUp {
+				20% {
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				40%,
+				45% {
+					opacity: 0.75;
+					-webkit-transform: translate3d(0, 0px, 0);
+					transform: translate3d(0, 0px, 0);
+				}
+				100% {
+					opacity: 0;
+					-webkit-transform: translate3d(0, -100%, 0);
+					transform: translate3d(0, -100%, 0);
+				}
+			}
+			
+			.fade-out-up {
+				-webkit-animation-name: fadeOutUp;
+				animation-name: fadeOutUp;
+			}
+			
+			.menu-open {
+				height: 100%;
+				width: 100%;
+			}
+			
+			.menu-open .mui-scroll-wrapper {
+				position: absolute;
+				top: 48;
+				bottom: 0;
+				left: 0;
+				z-index: 1;
+				width: 100%;
+				overflow: hidden;
+				-webkit-backface-visibility: hidden;
+			}
+			
+			.menu-backdrop {
+				display: none;
+			}
+			
+			.menu-open .menu-backdrop {
+				position: fixed;
+				top: 0;
+				bottom: 0;
+				height: 100%;
+				width: 100%;
+				display: block;
+				z-index: 998;
+			}
+			
+			.menu-wrapper {
+				position: absolute;
+				top: 48px;
+				left: 0;
+				right: 0;
+				z-index: 999;
+				text-align: center;
+				/**background-color: #333;**/
+				width: 100%;
+			}
+			
+			.menu-wrapper.hidden {
+				-webkit-transform: translate3d(0, -100%, 0);
+				transform: translate3d(0, -100%, 0);
+				z-index: -1;
+			}
+			
+			.menu {
+				width: 100%;
+			}
+			
+			.menu .mui-table-view-inverted {
+				/**color: gray;**/
+				font-size: 19px;
+			}
+			
+			.menu .mui-table-view-inverted .mui-table-view-cell:after {
+				height: 2px;
+				left: 0;
+				right: 0;
+			}
+			
+			.menu-wrapper.mui-active,
+			.menu-wrapper.mui-active .menu {
+				-webkit-transform: translate3d(0, 0, 0);
+				transform: translate3d(0, 0, 0);
+			}
 		</style>
 	</head>
 
@@ -159,6 +465,21 @@
 					</div>
 				</div>
 				<div class="mui-slider-group">
+				</div>
+				<div id="menu-wrapper" class="menu-wrapper hidden">
+					<div id="menu" class="menu">
+						<ul class="mui-table-view mui-table-view-inverted">
+							<li class="mui-table-view-cell">
+								<a href="javascript:;"></a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a href="javascript:;"></a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a href="javascript:;"></a>
+							</li>
+						</ul>
+					</div>
 				</div>
 				<div class="spinner">
 					<div class="bounce1"></div>
@@ -172,6 +493,7 @@
 		<script src="../../js/mui.pullToRefresh.material.js"></script>
 		<script src="../../js/sha256.js"></script>
 		<script src="../../js/jquery-3.2.0.min.js"></script>
+		<script type="text/javascript" src="../../js/language.js" ></script>
 		<script src="../../js/knockout-3.4.2.js"></script>
 		<script src="../../js/common.js"></script>
 		<script>
@@ -183,8 +505,44 @@
 					indicators: true,
 					deceleration: deceleration
 				});
+				
+				$('#menu-wrapper a').first().text(TextMessage.register);
+				$('#menu-wrapper a').eq(1).text(TextMessage.login);
+				$('#menu-wrapper a').last().text(TextMessage.skip);
 
+				var menuWrapper = document.getElementById("menu-wrapper");
+				var menuWrapperClassList = menuWrapper.classList;
+				var network = false;
+				var busying = false;
+
+				function toggleMenu() {
+					if(busying) {
+						return;
+					}
+					busying = true;
+					if(menuWrapperClassList.contains('mui-active')) {
+						document.body.classList.remove('menu-open');
+						menuWrapper.className = 'menu-wrapper fade-out-up animated';
+						menu.className = 'menu bounce-out-up animated';
+						setTimeout(function() {
+							menuWrapper.classList.add('hidden');
+						}, 500);
+					} else {
+						document.body.classList.add('menu-open');
+						menuWrapper.className = 'menu-wrapper fade-in-down animated mui-active';
+						menu.className = 'menu bounce-in-down animated';
+					}
+					setTimeout(function() {
+						busying = false;
+					}, 500);
+				}
+
+				window.addEventListener('showMenu', function(event) {
+					Log.i("showMenu...");
+					toggleMenu();
+				});
 				mui.plusReady(function() {
+					Log.i("pullrefresh_with_tab.html plusReady...");
 					mui.preload({
 						id: 'detail',
 						url: '../main/products/detail.html'
@@ -210,7 +568,6 @@
 								Log.i("create catalog finish...");
 							},
 							ng: function(data) {
-								Log.e("category ng");
 							}
 						}).then(function() {
 							createFragment(null, true);
@@ -247,7 +604,6 @@
 								}
 							},
 							ng: function(data) {
-								Log.e(data);
 							},
 							error: function() {
 								if(self != null) {
