--- a/kankan/pages/main/search.html
+++ b/kankan/pages/main/search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<title>search</title>
@@ -15,6 +16,7 @@
 			}
 		</style>
 	</head>
+
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
@@ -23,7 +25,32 @@
 			<a class="mui-icon mui-icon-search mui-pull-right"></a>
 		</header>
 	</body>
-	<script src="../../js/mui.min.js"></script>
-	<script src="../../js/jquery-3.2.0.min.js"></script>
-	<script type="text/javascript" src="../../js/language.js" ></script>
+	<script type="text/javascript" src="../../js/mui.min.js"></script>
+	<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
+	<script type="text/javascript" src="../../js/language.js"></script>
+	<script type="text/javascript" src="../../js/common.js"></script>
+	<script type="text/javascript">
+		(function(mui, doc) {
+			var keyword = "";
+			mui.init({
+				beforeback: function() {
+					var list = plus.webview.getWebviewById('pullrefresh_with_tab');
+					mui.fire(list, 'refresh', {
+						keyword: keyword
+					});
+					return true;
+				}
+			});
+			$(doc).ready(function() {
+				$('.mui-icon-search').click(function() {
+					keyword = $('#search').val().trim();
+					Log.i("keyword is " + keyword);
+					setTimeout(function() {
+						mui.back();
+					}, 1000);
+				});
+			});
+		})(mui, document);
+	</script>
+
 </html>
