--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -98,14 +98,15 @@
 				<div class="mui-text-right lang" id="forget_password" data-locale="forget_password"></div>
 			</div>
 		</div>
-		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/mui.enterfocus.js"></script>
-		<script src="../../js/app.js"></script>
-		<script src="../../js/jquery-3.2.0.min.js"></script>
-		<script src="../../js/language.js"></script>
-		<script src="../../js/md5.js"></script>
-		<script src="../../js/sha256.js"></script>
-		<script src="../../js/common.js"></script>
+		<script type="text/javascript" src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/mui.enterfocus.js"></script>
+		<script type="text/javascript" src="../../js/app.js"></script>
+		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
+		<script type="text/javascript" src="../../js/language.js"></script>
+		<script type="text/javascript" src="../../js/md5.js"></script>
+		<script type="text/javascript" src="../../js/sha1.js" ></script>
+		<script type="text/javascript" src="../../js/sha256.js" ></script>
+		<script type="text/javascript" src="../../js/common.js"></script>
 		<script>
 			(function($, doc) {
 				$.init({
@@ -192,7 +193,7 @@
 						var params = {};
 						params[Api.Params.loginType] = LOGIN_TYPE.EMAIL;
 						params[Api.Params.email] = doc.getElementById('email').value.trim();
-						params[Api.Params.password] = hex_md5(doc.getElementById('password').value.trim());
+						params[Api.Params.password] = hex_sha1(hex_md5(doc.getElementById('password').value.trim()));
 						Repository.User.login(params, {
 							ok: function(data) {
 								// TODO OK logic
