--- a/kankan/pages/login/reg.html
+++ b/kankan/pages/login/reg.html
@@ -173,16 +173,17 @@
 				<p class="lang" data-locale="register-tips"></p>
 			</div>
 		</div>
-		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/app.js"></script>
-		<script src="../../js/jquery-3.2.0.min.js"></script>
-		<script src="../../js/language.js"></script>
-		<script src="../../js/picker/mui.picker.js"></script>
-		<script src="../../js/picker/mui.poppicker.js"></script>
-		<script src="../../js/picker/city.data.js"></script>
-		<script src="../../js/sha256.js"></script>
+		<script type="text/javascript" src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/app.js"></script>
+		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
+		<script type="text/javascript" src="../../js/language.js"></script>
+		<script type="text/javascript" src="../../js/picker/mui.picker.js"></script>
+		<script type="text/javascript" src="../../js/picker/mui.poppicker.js"></script>
+		<script type="text/javascript" src="../../js/picker/city.data.js"></script>
+		<script type="text/javascript" src="../../js/sha1.js"></script>
+		<script type="text/javascript" src="../../js/sha256.js"></script>
 		<script type="text/javascript" src="../../js/md5.js"></script>
-		<script src="../../js/common.js"></script>
+		<script type="text/javascript" src="../../js/common.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			(function(mui, doc) {
 				mui.init();
@@ -237,10 +238,11 @@
 						var params = {};
 						params[Api.Params.email] = doc.getElementById('email').value.trim();
 						params[Api.Params.username] = doc.getElementById('username').value.trim();
-						params[Api.Params.password] = hex_md5(doc.getElementById('password').value.trim());
+						params[Api.Params.password] = hex_sha1(hex_md5(doc.getElementById('password').value.trim()));
 						params[Api.Params.addressId] = doc.getElementById('city').getAttribute('data-val');
 						params[Api.Params.vCode] = doc.getElementById('verificationCode').value.trim();
 						params[Api.Params.rCode] = doc.getElementById('introduction-code').value.trim();
+						params[Api.Params.loginType] = LOGIN_TYPE.EMAIL;
 						Repository.User.register(params, {
 							ok: function(data) {
 								Log.i("register ok");
@@ -285,9 +287,7 @@
 					// address logic
 					var cityPickerBtn = doc.getElementById('showCityPicker');
 					var cityInput = doc.getElementById('city');
-					var cityPicker = new mui.PopPicker({
-						layer: 2
-					});
+					var cityPicker = new mui.PopPicker();
 					cityPicker.setData(cityData);
 					cityPickerBtn.addEventListener('tap', function(event) {
 						showCityPicker();
@@ -300,8 +300,8 @@
 						Log.i("click cityPicker");
 						cityPicker.show(function(items) {
 							var cityElement = doc.getElementById('city');
-							cityElement.value = items[0].text + " " + items[1].text;
-							cityElement.setAttribute('data-val', items[1].value);
+							cityElement.value = items[0].text;
+							cityElement.setAttribute('data-val', items[0].value);
 						});
 					}
 				});
