20170428 by wushc add user.html setting.html modigy css style

--- a/demo/transaction/distribution.html
+++ b/demo/transaction/distribution.html
@@ -61,7 +61,7 @@
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
 					<span class="mui-icon mui-icon-left-nav"><font size="4">戻る<font size="4"></span>
 				</button>
-				<h1 class="mui-center mui-title">物流</h1>
+				<h1 class="mui-center mui-title title-center">物流</h1>
 			</div>
 			<div class="mui-page-content">
 				<div class="tran-page">
