--- a/demo/transaction/deal.html
+++ b/demo/transaction/deal.html
@@ -37,9 +37,9 @@
 			<!--页面标题栏开始-->
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"><font size="4">戻る<font size="4"></span>
+					<span class="mui-icon mui-icon-left-nav"><font size="4">戻る</font></span>
 				</button>
-				<h1 class="mui-center mui-title"><b>Tran</b></h1>
+				<h1 class="mui-center mui-title title-center"><b>Tran</b></h1>
 			</div>
 
 			<!--页面标题栏结束-->
