求购商品发布和一般商品发布文言替换

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -543,6 +543,9 @@
 						if(data == "1000") {
 							alert(TextMessage.test);
 						}
+						if(data == "2004") {
+							alert(TextMessage.operation_error);
+						}
 					}
 				});
 
