--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -184,6 +184,7 @@
 				var time2=getNowFormatDate();
 				var contents2=document.commodity_comments.leave_msg_detail.value;
 				var headimg2=results.data[0].photo;
+				console.log(headimg2);
 				var uname2=results.data[0].nick_name;
 				var html2 = new Util.StringBuilder();
 					html2.append('<div class="comtent mui-pull-left"><div class="mui-pull-left">')
