--- a/kankan/pages/login/update_password.html
+++ b/kankan/pages/login/update_password.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>forget_password</title>
+		<title>update_password</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/style.css" rel="stylesheet" />
 		<style>
@@ -45,12 +45,6 @@
 			.mui-input-row label~textarea {
 				margin-top: 1px;
 			}
-			
-			.mui-content span {
-				font-size: smaller;
-				display: block;
-				padding: 12px;
-			}
 		</style>
 	</head>
 
@@ -61,75 +55,61 @@
 			<h1 class="mui-title lang" data-locale="retrieve_password"></h1>
 		</header>
 		<div class="mui-content">
-			<span class="lang" data-locale="forget_password_msg"></span>
 			<form class="mui-input-group">
 				<div class="mui-input-row">
-					<label class="lang" data-locale="email"></label>
-					<input id='email' type="email" class="mui-input-clear mui-input lang" data-locale="please-input-email">
+					<label class="lang" data-locale="new_password"></label>
+					<input id='password' type="password" class="mui-input-clear mui-input lang" data-locale="please-input-password">
+				</div>
+				<div class="mui-input-row">
+					<label class="lang" data-locale="verification-code"></label>
+					<input id='ver_code' type="text" class="mui-input-clear mui-input lang" data-locale="please-input-verification-code">
 				</div>
 			</form>
 			<div class="mui-content-padded">
-				<button id='sendMail' class="mui-btn mui-btn-block mui-btn-danger lang" data-locale="retrieve_password"></button>
+				<button id='sendMail' class="mui-btn mui-btn-block mui-btn-danger lang" data-locale="register"></button>
 			</div>
 		</div>
 		<script type="text/javascript" src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/app.js"></script>
 		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
 		<script type="text/javascript" src="../../js/language.js"></script>
+		<script type="text/javascript" src="../../js/sha1.js"></script>
 		<script type="text/javascript" src="../../js/sha256.js"></script>
+		<script type="text/javascript" src="../../js/md5.js"></script>
 		<script type="text/javascript" src="../../js/common.js"></script>
 		<script>
 			(function($, doc) {
 				$.init();
 				$.plusReady(function() {
+					var self = plus.webview.currentWebview();
+					var email = self.email;
 					var sendButton = doc.getElementById('sendMail');
 					var emailBox = doc.getElementById('email');
 					sendButton.addEventListener('tap', function() {
 						var waiting = plus.nativeUI.showWaiting();
 						var params = {
-							pwd_flg: "verification",
-							email: emailBox.value.trim()
+							email: email,
+							pwd_flg: "modify",
+							ver_code: doc.getElementById('ver_code').value.trim(),
+							password: hex_sha1(hex_md5(doc.getElementById('password').value.trim()))
 						};
 						Repository.User.forgetPwd(params, {
 							ok: function(data) {
-								setTimeout(function() {
+								setTimeout(function(){
 									waiting.close();
 									$.openWindow({
-										id: 'update_password',
-										url: 'update_password.html',
+										id:'login',
+										url:'login.html',
 										waiting: {
 											autoShow: false
-										},
-										extras: {
-											email: emailBox.value.trim()
 										}
 									});
 								}, 500);
 							},
 							ng: function(data) {
 								waiting.close();
-								$.each(data, function(key, value) {
-									switch(value) {
-										case "1002":
-											if(key == Api.Params.email) {
-												mui.toast("E-Mail" + TextMessage.errorCode_1002, {
-													duration: 'long',
-													type: 'div'
-												})
-											}
-											break;
-										default:
-											break;
-									}
-								});
-								if(data == "2010") {
-									mui.toast(TextMessage.not_exist_email, {
-										duration: 'long',
-										type: 'div'
-									})
-								}
 							},
-							error:function(){
+							error: function(){
 								waiting.close();
 							}
 						});
